test/scc_test/exp/semantic-errors/047.a
047.t:4:7: error: invalid operands to binary '+'